# analysis-agent

./: .gitignore  .pre-commit-config.yaml  COMPLETE_FLOW_IMPLEMENTATION.md  CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  MODULAR_ARCHITECTURE.md  README.md  TOOL_INTEGRATION_DESIGN.md  agent.py  agent.yaml  agent_original_backup.py  complete_demo.sh  config.json  example_config_usage.py  pyproject.toml  requirements.txt  test_agent_direct.sh  test_problem_solving.sh
agent_modules/: __init__.py
agent_modules/analysis/: __init__.py  result_aggregator.py  text_analyzer.py
agent_modules/core/: __init__.py  base_agent.py
agent_modules/execution/: __init__.py  mcp_client.py  tool_executor.py
agent_modules/planning/: __init__.py  problem_decomposer.py  step_planner.py
agent_modules/utils/: __init__.py  ai_client.py  config_loader.py  response_parser.py  tool_validator.py
